# honeywell-radio-exporter

./: .cursorrules  .dockerignore  .gitignore  .pylintrc  .yamllint  Dockerfile  METRIC_REFACTORING_SUMMARY.md  README.md  ZONE_DEVICE_MAPPING_CHANGELOG.md  bandit-report.json  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run_tests.py  tox.ini
.cursor/: general_instructions.md  project_description.md
docs/: CACHE_DOCUMENTATION.md  CACHING_IMPLEMENTATION.md  DASHBOARD_UPDATES.md  MANUAL_DASHBOARD_IMPORT.md  PUZZLE_VERSIONS.md  README.docker.md  SUMMARY.md  USAGE.md  ZONE_DEVICE_MAPPING.md  grafana-dashboard.json  prometheus.yml  ramses-prometheus-exporter.service
honeywell_radio_exporter/: __init__.py  __main__.py  app.py  boiler_log.py  config.py  consumer.py  db_migration.py  device_classes.py  dhw_log.py  fault_log.py  janitor.py  live_events.py  log_rotation.py  message_processor.py  message_type_descriptions.py  metrics_http.py  puzzle_log.py  ramses_prometheus_exporter.py  runtime_versions.py  validator.py  warning_buffer.py  watcher.py
honeywell_radio_exporter/db/: __init__.py  connection.py  creds.py  repository.py
scripts/: README.md  capture_censored_ui.py  dev.sh  example_upload.sh  upload_grafana_dashboard.py
tests/: conftest.py  test_boiler_log.py  test_db_migration.py  test_device_battery.py  test_device_classes.py  test_device_names.py  test_dhw_log.py  test_exporter.py  test_fault_log.py  test_heat_demand.py  test_main.py  test_message_type_descriptions.py  test_metrics_validation.py  test_puzzle_log.py  test_runtime_versions.py  test_sample_data_metrics.py  test_setpoint_routing.py  test_validator.py  test_warning_buffer.py  test_window_state.py  test_zone_names.py
tests/sample_data/: generated.txt  ramses.msgs
